# Genetic-Tetris

./: Cargo.toml  README.md
src/: main.rs
src/agent/: genetic.rs  human.rs  mod.rs  random.rs
src/misc/: heuristics.rs  mod.rs
src/tetris/: mod.rs  piece.rs
