[package]
name = "genetic_tetris"
version = "0.1.0"
authors = ["Dario Sučić <dariosucic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ggez = "0.5.1"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_distr = "0.2.2"
winit = "0.19.3"